add stylesheet to equipment list template

--- a/templates/equipment-list.html
+++ b/templates/equipment-list.html
@@ -2,17 +2,18 @@
 <html lang="en-US">
 <head>
     <title>Checkout Equipment</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
 
 <nav>
     <ul>
-        <li><a href="calendar.html" rel="related">Reservation Calendar</a></li>
         <li><a href="equipment-collection.html" rel="self">All Equipment</a></li>
+        <li><a href="calendar.html" rel="related">Reservation Calendar</a></li>
     </ul>
 </nav>
 
-<section>
+<main>
 <h1>SILS Checkout Equipment</h1>
 <!-- The equipment collection needs:
      - List of links to equipment
@@ -41,7 +42,7 @@
     <label>Description:<br><textarea name="description"></textarea></label><br>
     <input type="submit" value="Add Item">
 </form>
-</section>
+</main>
 
 </body>
 </html>
