--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@ body, nav, nav ul {
 }
 body {
     font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.4em;
 }
 nav {
     background: black;
@@ -25,4 +26,8 @@ nav a[rel~="self"] {
 main {
     width: 80%;
     margin: auto;
+}
+
+form p {
+    margin: 0;
 }
