add reservation pages

--- a/templates/equipment-item.html
+++ b/templates/equipment-item.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <title>Sample Equipment</title>
+    <title>{{ item.name }} -- Checkout Equipment</title>
     <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
@@ -9,7 +9,7 @@
 <nav>
     <ul>
         <li><a href="/equipment" rel="collection">Equipment Collection</a></li>
-        <li><a href="calendar.html" rel="related">Reservation Calendar</a></li>
+        <li><a href="/reservations" rel="related">Reservation Calendar</a></li>
     </ul>
 </nav>
 
