--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,15 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.4em;
 }
+main, footer {
+    width: 80%;
+    margin: auto;
+}
+footer {
+    font-size: 75%;
+    margin-top: 1em;
+}
+
 nav {
     background: black;
     padding-left: 10%;
@@ -22,12 +31,6 @@ nav a {
 nav a[rel~="self"] {
     background: purple;
 }
-
-main {
-    width: 80%;
-    margin: auto;
-}
-
 
 form {
     min-width: 10em;
@@ -47,4 +50,8 @@ label + input, label + select, label + span {
 textarea {
     display:block;
     width: 22.7em;
+}
+
+input + span, textarea + span, ul + span {
+    display: none;
 }
